# picomobile

./: .gitignore  README.md
picomobile-embedded/: .gitignore  Cargo.toml  bacon.toml  memory.x
picomobile-embedded/.cargo/: config.toml
picomobile-embedded/src/: command.rs  driving.rs  main.rs  motor.rs  servo.rs  slice_writer.rs  utils.rs
picomobile-embedded/src/arducam/: arducam_stream.rs  mod.rs  ov2640_registers.h  ov2640_registers.rs  resolution.rs
picomobile-gui/: .gitignore  Cargo.toml  bacon.toml
picomobile-gui/src/: args.rs  cam_capture.rs  cam_tunnel.rs  command_tunnel.rs  config.rs  event_saver.rs  main.rs  move_detector.rs  pico_ports.rs  resolution.rs
picomobile-gui/src/sound/: play_sound.rs  sound_config.rs  sound_player.rs
picomobile-gui/static/: app.js  index.html  style.css
