[package]
name = "picomobile-control"
version = "0.1.0"
edition = "2024"

[features]
default = ["sound"]
sound = ["rodio"]

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
image = "0.25"
rodio = { version = "0.21", optional = true, default-features = false, features = [ "mp3", "playback", "tracing" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["fs"] }
